--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="color-scheme" content="light dark">
+    <meta name="theme-color" content="#1a1a1a" />
     <title>Exerdice</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
   </head>
